--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://ellacay:ellacay@techinwithella.ki6ja.mongodb.net/techinwithella?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://ellacay:ellacay@techinwithella.ki6ja.mongodb.net/TechInWithElla?retryWrites=true&w=majority
