--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
   "main": "index.js",
  "scripts": {
   "start": "nodemon index.js",
-  "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
+
+"build": "cd client && npm run build",
+        "install-client": "cd client && npm install",
+        "heroku-postbuild": "npm run install-client && npm run build",
+        "server": "nodemon server.js",
+        "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run start --prefix client\""
+
 },
   "author": "",
   "license": "ISC",
