--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-markdown": "^7.1.0",
     "react-router": "^6.0.1",
     "react-router-dom": "^5.2.0",
+    "react-router-sitemap": "^1.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
     "webfontloader": "^1.6.28"
@@ -31,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sitemap": "babel-node ./sitemap-builder.js"
   },
   "eslintConfig": {
     "extends": [
@@ -51,5 +53,11 @@
       "last 1 safari version"
     ]
   },
-"proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0"
+  }
 }
